blocks coords update

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
 	<body id="body" onmousemove="getCoor(event)">
-		<canvas id="canvas" onclick="toClick()"></canvas>
+		<div id="gameContainer">
+			<canvas id="canvas" onclick="toClick()"></canvas>
+		</div>
+
 		<script src="src/drawingTools.js"></script>
 		<script src="src/animate.js"></script>
 		<script src="src/levels.js"></script>
