--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
 		<title>Arkanoid</title>
 		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
-	<body id="body" onmousemove="getCoor(event)">
-		<div id="gameContainer">
-			<canvas id="canvas" onclick="toClick()"></canvas>
+	<body id="body">
+		<!-- onmousemove="getCoor(event)" -->
+		<div id="app">
+			<!-- <canvas id="canvas" onclick="toClick()"></canvas> -->
 		</div>
-
-		<script src="src/drawingTools.js"></script>
+		<!-- stara struktura niemodułowa -->
+		<!-- <script src="src/drawingTools.js"></script>
 		<script src="src/animate.js"></script>
 		<script src="src/levels.js"></script>
 		<script src="src/levelGenerator.js"></script>
 		<script src="src/sound.js"></script>
-		<script src="src/box.js"></script>
-		<script src="game.js"></script>
+		<script src="src/box.js"></script> -->
+		<script type="module" src="game.js"></script>
 	</body>
 </html>
