first prod upload

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Arkanoid</title>
-		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
 	<body id="body">
 		<!-- onmousemove="getCoor(event)" -->
@@ -18,6 +17,7 @@
 		<script src="src/levelGenerator.js"></script>
 		<script src="src/sound.js"></script>
 		<script src="src/box.js"></script> -->
-		<script type="module" src="game.js"></script>
+		<script type="module" src="./src/startPage.js"></script>
+		<script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
 	</body>
 </html>
