--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 		<script src="src/sound.js"></script>
 		<script src="src/box.js"></script> -->
 		<script type="module" src="./src/startPage.js"></script>
-		<script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
+		<script src="https://code.createjs.com/1.0.0/preloadjs.min.js"></script>
 	</body>
 </html>
